--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "cs_books",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wjzz.github.io/cs-books-react",
   "dependencies": {
     "@types/jest": "24.0.13",
     "@types/node": "12.0.4",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.3",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -15,6 +17,8 @@
     "typescript": "3.5.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
